@@ -227,4 +227,50 @@ $lang[3] = array("Skannattava alue",          // 0
 
 ////////////////////////////////////////////////////////////////////////
 
+// 4 = Русский (Russian)
+
+$lang[4] = array("Область сканирования", // 0
+                 "Слева",                // 1
+		 "От верха",             // 2
+		 "Ширина",               // 3
+		 "Высота",               // 4
+		 "Лево-верх",            // 5
+		 "Право-низ",            // 6
+		 "Позиция X",            // 7
+		 "Позиция Y",            // 8
+		 "Настройки сканирования",        // 9
+		 "Формат файла",         // 10
+		 "JPG",                  // 11
+		 "PNM",                  // 12
+		 "TIFF",                 // 13
+		 "Режим",                // 14
+		 "Цветной 24 bit",       // 15
+		 "Оттенки серого",       // 16
+		 "Черно-белый",          // 17
+		 "Разрешение DPI",       // 18
+		 "Цвет",                 // 19
+		 "Негатив",              // 20
+		 "Баланс белого",        // 21
+		 "Яркость",              // 22
+		 "Контраст",             // 23
+		 "Просмотр",             // 24
+		 "Сброс",                // 25
+		 "OCR",                  // 26
+		 "Сканировать",          // 27
+		 "Очистить",             // 28
+		 "Просмотр<br><br>Нет выделения<br>Нет формата файла<br>Нет разрешения DPI", // 29
+		 "Максимальные значения сканирования<br><br>DIN-A4<br>Разрешение DPI = 5 - 600",  // 30
+		 "Устройство сканирования",      // 31
+		 "ОШИБКА",               // 32
+		 "Сканеры не обнаружены.<br>Проверьте подключение через программу sane-find-scanner (если установлена).<br>Или почитайте дополнительные инструкции (README, FAQ, manpages).",      // 33
+		 "Повторить",            // 34
+		 "Правая кнопка - сохранить", // 35
+                 "Закрыть",              // 36
+                 "Помощь",               // 37
+                 "Дополнительные параметры",      // 38
+                 "Нет комманды сканирования",     // 39
+                 "Формат страницы",      // 40
+);
+
+
 ?>
