@@ -62,3 +62,4 @@
 	- forms are sent by POST
 	- changed encoding to UTF-8 with a view to creating translations in other languages
 	- added finish translation
+	- added russian translation
